@@ -4,6 +4,8 @@ import p2p.common.model.Group;
 import p2p.common.model.User;
 import p2p.common.model.message.ElectionMessage;
 import p2p.common.rmi.PeerService;
+import p2p.common.vectorclock.VectorClock;
+import p2p.peer.PeerEventListener;
 import p2p.peer.messaging.GossipManager;
 
 import java.rmi.registry.LocateRegistry;
@@ -33,19 +35,28 @@ public class LeaderElectionManager {
 
     private static final long ELECTION_TIMEOUT_MS = 3000; // 3 seconds
 
-    public LeaderElectionManager(User localUser, GroupManager groupManager) {
+    private final List<PeerEventListener> listeners = new CopyOnWriteArrayList<>();
+
+    private final VectorClock vectorClock;
+
+    public LeaderElectionManager(User localUser, GroupManager groupManager, VectorClock vectorClock) {
         this.localUser = localUser;
         this.groupManager = groupManager;
+        this.vectorClock = vectorClock;
+    }
+
+    public void addEventListener(PeerEventListener listener) {
+        listeners.add(listener);
+    }
+
+    public void removeEventListener(PeerEventListener listener) {
+        listeners.remove(listener);
     }
 
     public void setGossipManager(GossipManager gossipManager) {
         this.gossipManager = gossipManager;
         // Register callback for leader failure detection
         gossipManager.setLeaderFailureCallback(this::initiateElectionForGroup);
-    }
-
-    public void start() {
-        // No periodic heartbeat checking - we rely on gossip-based detection
     }
 
     public void stop() {
@@ -69,7 +80,7 @@ public class LeaderElectionManager {
             Group group = groupManager.getGroup(groupId);
             if (group != null) {
                 // Leader is still alive - cancel the election
-                System.out.println("[Election] Leader activity detected for group " + group.getName() +
+                notifyLog("Leader activity detected for group " + group.name() +
                         " - cancelling election (epoch " + state.epoch + ")");
                 ongoingElections.remove(groupId);
 
@@ -92,13 +103,13 @@ public class LeaderElectionManager {
 
         // Check if group has fallen below minimum size
         // When leader fails, only non-leader members remain
-        int remainingMembers = group.getMembers().size(); // Excludes the failed leader
+        int remainingMembers = group.members().size(); // Excludes the failed leader
         if (remainingMembers <= 2) {
             // Need at least 3 members after selecting new leader (2 non-leader + 1 new
             // leader)
             // With only 2 remaining, we'd have 1 leader + 1 member = 2 total (below minimum
             // of 3)
-            System.out.println("[Election] Group " + group.getName() + " has only " +
+            notifyLog("Group " + group.name() + " has only " +
                     remainingMembers + " remaining members after leader failure. Auto-dissolving...");
             groupManager.dissolveGroup(groupId);
             if (gossipManager != null) {
@@ -114,19 +125,19 @@ public class LeaderElectionManager {
      * Initiate a new election for the group with deterministic candidate selection.
      */
     public void initiateElection(Group group) {
-        String groupId = group.getGroupId();
-        long newEpoch = group.getEpoch() + 1;
+        String groupId = group.groupId();
+        long newEpoch = group.epoch() + 1;
 
         // Check if we're the leader (shouldn't initiate election if we are)
-        if (group.getLeaderId().equals(localUser.getUserId())) {
-            System.out.println("[Election] We are the leader - not initiating election");
+        if (group.leader().userId().equals(localUser.userId())) {
+            notifyLog("We are the leader - not initiating election");
             return;
         }
 
         // Check if election already ongoing for this epoch
         ElectionState existingState = ongoingElections.get(groupId);
         if (existingState != null && existingState.epoch == newEpoch) {
-            System.out.println("[Election] Election already ongoing for epoch " + newEpoch);
+            notifyLog("Election already ongoing for epoch " + newEpoch);
             return; // Already in progress
         }
 
@@ -134,33 +145,31 @@ public class LeaderElectionManager {
         // Use the highest user ID among all members (deterministic)
         String determinedCandidate = determineCandidateLexicographically(group);
 
-        System.out.println("[Election] Leader suspected for group " + group.getName() +
-                " (epoch " + newEpoch + "), deterministic candidate: " + determinedCandidate.substring(0, 8));
+        notifyLog("Leader suspected for group " + group.name() +
+                " (epoch " + newEpoch + "), deterministic candidate: " + determinedCandidate);
 
         // Only the determined candidate should propose
-        if (!determinedCandidate.equals(localUser.getUserId())) {
-            // We're not the candidate, just wait for proposal from determined candidate
-            System.out.println("[Election] Not the candidate (we are " + localUser.getUserId().substring(0, 8) +
-                    "), waiting for proposal");
+        if (!determinedCandidate.equals(localUser.userId())) {
             return;
         }
 
         // We are the determined candidate, initiate election
-        ElectionState state = new ElectionState(group, newEpoch, localUser.getUserId());
+        ElectionState state = new ElectionState(group, newEpoch, localUser.userId());
         ongoingElections.put(groupId, state);
 
-        System.out.println("[Election] Starting election for group " + group.getName() +
+        notifyLog("Starting election for group " + group.name() +
                 " (epoch " + newEpoch + ") as candidate");
 
         // Vote for ourselves
-        state.recordVote(localUser.getUserId(), localUser.getUserId());
+        state.recordVote(localUser.userId(), localUser.userId());
         votedEpochs.computeIfAbsent(groupId, k -> ConcurrentHashMap.newKeySet()).add(newEpoch);
 
         // Broadcast proposal
         ElectionMessage proposal = ElectionMessage.create(
-                localUser.getUserId(), groupId,
+                localUser.userId(), groupId,
                 ElectionMessage.ElectionType.PROPOSAL,
-                localUser.getUserId(), newEpoch);
+                localUser.userId(), newEpoch,
+                vectorClock.clone());
 
         broadcastToGroup(group, proposal);
 
@@ -172,20 +181,18 @@ public class LeaderElectionManager {
      * Determine the candidate using lexicographic ordering (highest user ID wins).
      * This ensures all nodes agree on who should propose.
      */
-    private String determineCandidateLexicographically(Group group) {
-        List<String> allMemberIds = new ArrayList<>();
+    public String determineCandidateLexicographically(Group group) {
+        List<String> allMemberIds = group.members().stream().map(User::userId).collect(Collectors.toList());
 
-        // Add all members
-        for (User member : group.getMembers()) {
-            allMemberIds.add(member.getUserId());
+        // Do NOT add current leader - we are electing a replacement because they failed
+
+        if (allMemberIds.isEmpty()) {
+            throw new IllegalStateException("Cannot determine candidate : no members available");
         }
-
-        // Add current leader (in case they're still in group but failed)
-        allMemberIds.add(group.getLeaderId());
 
         // Sort lexicographically and pick the highest (last in sorted order)
         Collections.sort(allMemberIds);
-        return allMemberIds.get(allMemberIds.size() - 1);
+        return allMemberIds.getLast();
     }
 
     /**
@@ -194,35 +201,44 @@ public class LeaderElectionManager {
     public void handleElectionProposal(ElectionMessage message) {
         Group group = groupManager.getGroup(message.getGroupId());
         if (group == null) {
-            System.out.println("[Election] Ignoring proposal - group not found: " + message.getGroupId());
+            notifyLog("Ignoring proposal - group not found: " + message.getGroupId());
+            return;
+        }
+
+        // Validate sender is a member of the group (or the failed leader)
+        // This allows non-friends to participate in election as long as they are in the
+        // group
+        String senderId = message.getSenderId();
+        if (!group.isMember(senderId) && !senderId.equals(group.leader().userId())) {
+            notifyLog("Ignoring proposal from non-member: " + senderId);
             return;
         }
 
         String groupId = message.getGroupId();
         long proposalEpoch = message.getEpoch();
 
-        System.out.println("[Election] Received proposal for group " + group.getName() +
+        notifyLog("Received proposal for group " + group.name() +
                 " (epoch " + proposalEpoch + ") from " + message.getSenderId() +
-                ", current epoch: " + group.getEpoch());
+                ", current epoch: " + group.epoch());
 
         // Reject stale proposals
-        if (proposalEpoch <= group.getEpoch()) {
-            System.out.println("[Election] Rejecting stale proposal (epoch " + proposalEpoch +
-                    " <= current " + group.getEpoch() + ")");
+        if (proposalEpoch <= group.epoch()) {
+            notifyLog("Rejecting stale proposal (epoch " + proposalEpoch +
+                    " <= current " + group.epoch() + ")");
             return;
         }
 
         // Check if we've already voted in this epoch
         Set<Long> voted = votedEpochs.computeIfAbsent(groupId, k -> ConcurrentHashMap.newKeySet());
         if (voted.contains(proposalEpoch)) {
-            System.out.println("[Election] Already voted in epoch " + proposalEpoch);
+            notifyLog("Already voted in epoch " + proposalEpoch);
             return; // Already voted in this epoch
         }
 
         // Verify this is from the deterministic candidate
         String expectedCandidate = determineCandidateLexicographically(group);
         if (!message.getCandidateId().equals(expectedCandidate)) {
-            System.out.println("[Election] Rejecting proposal from non-deterministic candidate " +
+            notifyLog("Rejecting proposal from non-deterministic candidate " +
                     message.getCandidateId() + ", expected " + expectedCandidate);
             return;
         }
@@ -238,16 +254,17 @@ public class LeaderElectionManager {
         }
 
         // Vote for the candidate
-        state.recordVote(localUser.getUserId(), message.getCandidateId());
+        state.recordVote(localUser.userId(), message.getCandidateId());
 
-        System.out.println("[Election] Voting for " + message.getCandidateId() +
+        notifyLog("Voting for " + message.getCandidateId() +
                 " in epoch " + proposalEpoch);
 
         // Send vote back to proposer
         ElectionMessage vote = ElectionMessage.create(
-                localUser.getUserId(), groupId,
+                localUser.userId(), groupId,
                 ElectionMessage.ElectionType.VOTE,
-                message.getCandidateId(), proposalEpoch);
+                message.getCandidateId(), proposalEpoch,
+                vectorClock.clone());
 
         // Send directly to the candidate
         sendMessageToUser(message.getSenderId(), vote, group);
@@ -259,28 +276,28 @@ public class LeaderElectionManager {
     public void handleElectionVote(ElectionMessage message) {
         ElectionState state = ongoingElections.get(message.getGroupId());
         if (state == null || state.epoch != message.getEpoch()) {
-            System.out.println("[Election] Ignoring vote - no matching election state");
+            notifyLog("Ignoring vote - no matching election state");
             return; // Not our election or wrong epoch
         }
 
         // Only the candidate should collect votes
-        if (!state.candidateId.equals(localUser.getUserId())) {
-            System.out.println("[Election] Ignoring vote - not the candidate");
+        if (!state.candidateId.equals(localUser.userId())) {
+            notifyLog("Ignoring vote - not the candidate");
             return;
         }
 
-        System.out.println("[Election] Received vote from " + message.getSenderId() +
+        notifyLog("Received vote from " + message.getSenderId() +
                 " for " + message.getCandidateId() + " (epoch " + message.getEpoch() + ")");
 
         // Record vote (idempotent - duplicate votes from same voter don't count twice)
         state.recordVote(message.getSenderId(), message.getCandidateId());
 
-        System.out.println("[Election] Vote count: " + state.getVoteCount());
+        notifyLog("Vote count: " + state.getVoteCount());
 
         // Check if we have quorum
         Group group = groupManager.getGroup(message.getGroupId());
         if (group != null && state.hasQuorum()) {
-            System.out.println("[Election] Quorum achieved! Finalizing election.");
+            notifyLog("Quorum achieved! Finalizing election.");
             // We have majority - finalize immediately
             finalizeElection(message.getGroupId());
         }
@@ -296,11 +313,21 @@ public class LeaderElectionManager {
         }
 
         // Reject stale results
-        if (message.getEpoch() <= group.getEpoch()) {
+        if (message.getEpoch() <= group.epoch()) {
             return;
         }
 
-        Group updatedGroup = group.withNewLeader(message.getCandidateId(), message.getEpoch());
+        User newLeader = group.members().stream()
+                .filter(u -> u.userId().equals(message.getCandidateId()))
+                .findFirst()
+                .orElse(null);
+        if(newLeader == null) {
+            notifyError("Election result references unknown member " + message.getCandidateId(), null);
+            return;
+        }
+        Group updatedGroup = group.withNewLeader(
+                newLeader,
+                message.getEpoch());
         groupManager.updateGroup(updatedGroup);
 
         ongoingElections.remove(message.getGroupId());
@@ -308,8 +335,10 @@ public class LeaderElectionManager {
         // Record leader activity for gossip
         recordLeaderActivity(message.getGroupId());
 
-        System.out.println("[Election] New leader elected for group " + group.getName() +
+        notifyLog("New leader elected for group " + group.name() +
                 " - " + message.getCandidateId() + " (epoch " + message.getEpoch() + ")");
+
+        notifyLeaderElected(message.getGroupId(), message.getCandidateId(), message.getEpoch());
     }
 
     /**
@@ -327,22 +356,24 @@ public class LeaderElectionManager {
         }
 
         // Only the candidate should finalize
-        if (!state.candidateId.equals(localUser.getUserId())) {
+        if (!state.candidateId.equals(localUser.userId())) {
             return;
         }
 
         // Check if we have quorum
         if (!state.hasQuorum()) {
-            System.out.println("[Election] Failed to achieve quorum for group " + group.getName());
+            notifyLog("Failed to achieve quorum for group " + group.name());
             ongoingElections.remove(groupId);
             return;
         }
 
         // Determine winner (should be the candidate since we have quorum)
         String winner = state.getWinner();
+        User winnerUser = group.members().stream().filter((user) -> user.userId().equals(winner)).findFirst()
+                .orElseThrow();
 
         // Update group with new leader
-        Group updatedGroup = group.withNewLeader(winner, state.epoch);
+        Group updatedGroup = group.withNewLeader(winnerUser, state.epoch);
         groupManager.updateGroup(updatedGroup);
 
         // Record leader activity for gossip
@@ -350,47 +381,50 @@ public class LeaderElectionManager {
 
         // Broadcast result
         ElectionMessage result = ElectionMessage.create(
-                localUser.getUserId(), groupId,
+                localUser.userId(), groupId,
                 ElectionMessage.ElectionType.RESULT,
-                winner, state.epoch);
+                winner, state.epoch,
+                vectorClock.clone());
 
         broadcastToGroup(updatedGroup, result);
 
         ongoingElections.remove(groupId);
 
-        System.out.println("[Election] Election complete for group " + group.getName() +
+        notifyLog("Election complete for group " + group.name() +
                 " - new leader: " + winner + " (epoch " + state.epoch + ") with " +
                 state.getVoteCount() + " votes");
+
+        notifyLeaderElected(groupId, winner, state.epoch);
     }
 
     /**
      * Send message to a specific user.
      */
     private void sendMessageToUser(String userId, ElectionMessage message, Group group) {
-        User target = group.getMembers().stream()
-                .filter(u -> u.getUserId().equals(userId))
+        User target = group.members().stream()
+                .filter(u -> u.userId().equals(userId))
                 .findFirst()
                 .orElse(null);
 
         if (target == null) {
-            System.err.println("[Election] Cannot find user " + userId.substring(0, 8) +
-                    " in group members to send vote");
+            notifyError("Cannot find user " + userId +
+                    " in group members to send vote", null);
             return;
         }
 
-        System.out.println("[Election] Sending " + message.getElectionType() + " to " +
-                target.getUsername() + " at " + target.getIpAddress() + ":" + target.getRmiPort());
+        notifyLog("Sending " + message.getElectionType() + " to " +
+                target.username() + " at " + target.ipAddress() + ":" + target.rmiPort());
 
         executor.submit(() -> {
             try {
-                Registry registry = LocateRegistry.getRegistry(target.getIpAddress(), target.getRmiPort());
+                Registry registry = LocateRegistry.getRegistry(target.ipAddress(), target.rmiPort());
                 PeerService peerService = (PeerService) registry.lookup("PeerService");
                 peerService.receiveMessage(message);
-                System.out.println("[Election] Successfully sent " + message.getElectionType() +
-                        " to " + target.getUsername());
+                notifyLog("Successfully sent " + message.getElectionType() +
+                        " to " + target.username());
             } catch (Exception e) {
-                System.err.println("[Election] Failed to send " + message.getElectionType() +
-                        " to " + target.getUsername() + ": " + e.getMessage());
+                notifyError("Failed to send " + message.getElectionType() +
+                        " to " + target.username(), e);
             }
         });
     }
@@ -399,27 +433,41 @@ public class LeaderElectionManager {
      * Broadcast message to all group members (including leader).
      */
     private void broadcastToGroup(Group group, ElectionMessage message) {
-        Set<User> allMembers = new HashSet<>(group.getMembers());
+        Set<User> allMembers = new HashSet<>(group.members());
 
-        System.out.println("[Election] Broadcasting to " + allMembers.size() + " members");
+        notifyLog("Broadcasting to " + allMembers.size() + " members");
 
         for (User member : allMembers) {
-            if (member.getUserId().equals(localUser.getUserId())) {
-                System.out.println("[Election] Skipping self: " + member.getUsername());
+            if (member.userId().equals(localUser.userId())) {
                 continue;
             }
 
-            System.out.println("[Election] Sending to " + member.getUsername() +
-                    " at " + member.getIpAddress() + ":" + member.getRmiPort());
+            notifyLog("Sending to " + member.username() +
+                    " at " + member.ipAddress() + ":" + member.rmiPort());
 
             executor.submit(() -> {
-                try {
-                    Registry registry = LocateRegistry.getRegistry(member.getIpAddress(), member.getRmiPort());
-                    PeerService peerService = (PeerService) registry.lookup("PeerService");
-                    peerService.receiveMessage(message);
-                    System.out.println("[Election] Successfully sent to " + member.getUsername());
-                } catch (Exception e) {
-                    System.err.println("[Election] Failed to send to " + member.getUsername() + ": " + e.getMessage());
+                int maxRetries = 3;
+                for (int i = 0; i < maxRetries; i++) {
+                    try {
+                        Registry registry = LocateRegistry.getRegistry(member.ipAddress(), member.rmiPort());
+                        PeerService peerService = (PeerService) registry.lookup("PeerService");
+                        peerService.receiveMessage(message);
+                        notifyLog("Successfully sent to " + member.username());
+                        return; // Success
+                    } catch (Exception e) {
+                        if (i == maxRetries - 1) {
+                            notifyError(
+                                    "Failed to send to " + member.username() + " after " + maxRetries + " attempts",
+                                    e);
+                        } else {
+                            try {
+                                Thread.sleep(500 * (i + 1)); // Backoff
+                            } catch (InterruptedException ie) {
+                                Thread.currentThread().interrupt();
+                                return;
+                            }
+                        }
+                    }
                 }
             });
         }
@@ -464,7 +512,7 @@ public class LeaderElectionManager {
         boolean hasQuorum() {
             // Election happens when leader fails, so we should NOT count the leader
             // Only count members (excluding the failed leader)
-            int activeMembers = group.getMembers().size(); // Members only, no leader
+            int activeMembers = group.members().size(); // Members only, no leader
             int quorum = (activeMembers / 2) + 1;
 
             // Count votes for our candidate
@@ -473,6 +521,30 @@ public class LeaderElectionManager {
                     .count();
 
             return votesForCandidate >= quorum;
+        }
+    }
+
+    private void notifyLog(String message) {
+        for (PeerEventListener listener : listeners) {
+            try{
+                listener.onLog(message);
+            }catch(RuntimeException ignored){}
+        }
+    }
+
+    private void notifyError(String message, Throwable t) {
+        for (PeerEventListener listener : listeners) {
+            try{
+                listener.onError(message, t);
+            }catch(RuntimeException ignored){}
+        }
+    }
+
+    private void notifyLeaderElected(String groupId, String leaderId, long epoch) {
+        for (PeerEventListener listener : listeners) {
+            try{
+                listener.onLeaderElected(groupId, leaderId, epoch);
+            }catch(RuntimeException ignored){}
         }
     }
 }
